 25. Prop_*Adjusters now support bumping casting costs.  See AHELP.
 26. CoffeeMud now supports the Grapevine network: see Installation Guide
 27. ICHANNELS ini entry is now deprecated, and its purpose folded into CHANNELS
 28. Lamp oil-filled bathtubs can now be set on fire, for what that's worth.
 29. The MUD will now validate the database version on boot, and refuse to start if mismatched.

# Build 5.10.5 Release 07/12/2025
  *  DATABASE CHANGED! (new CMCDAC table)
  1. New Generic Commands!, see GameBuildersGuide for more information.
  2. BodyPiercing is now recipe driven, and recipes are now split off by level.
  3. New Skill: Diary
  4. ColorSet now supports Exits, as well as explored/unexplored doors.
  5. Mudborn kids get Prop_SafePet with auto-leiging and auto-follow
  6. New prompt features: %h% %m% and %v% for percentages .. breaks MXP bars
  7. New disable flags: CHARCRSTAT, CHARCRRACE, CHARCRCLASS, CHARCRGENDER
  8. New archon LISTs: DEBUGFLAGS, DISABLEFLAGS
  9. Three new WebSocket macros (WebSock, WebSockASCII, and WebSockJSON).  See WebServer.html
 10. Log viewer in the MUDGrinder now shows the log by pages, starting at the last one.
 11. Undead-based races are now immune to Bleeding.
 12. New property: Prop_AffectReTick for changing the tick time of effects
 13. Siplet has been replaced with a new ph@-client version.
 14. MudChat now supports switching/adding dbs based on responses.
 15. New Percolator layouts: mesh, spotted mesh, and branch
 16. Ignore now supports ignoring players by limited categories.
 17. CoffeeMud now supports MTTS, and will skip ANSI prompts at CC if set.
 18. CoffeeMud now supports True color ansi codes, see HELP TRUECOLORS
 19. GMCP now supports more auto-logins.
 20. Sprinking of new CM1 commands: MUDINFO who, port, hosts, and WHOIS -name-
 21. Prop_ReqEntry and Prop_*Zapper support accusing someone of a crime.
 22. New WebMacros: TellMessageNext, and TellFunction.